--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="container">
+        <!-- Coluna Esquerda -->
         <div class="image-div">
             <div class="img-users">
                 <div class="img-head">
@@ -40,6 +41,7 @@
                 </div>
             </div>
         </div>
+        <!-- Coluna direita -->
         <div class="login-div">
             <div class="form-div">
                 <div class="text-head">
